@startuml
class KijitsuNyukinRequestEntity {
    - String request_id
    - String card_number
    - String customer_contract_number
    - String customer_billing_due_date
    - String contract_settlement_date
    - String deposit_date
    - BigDecimal deposit_amount
    - String excess_money_handling_category
}
KijitsuNyukinRequestEntity -> DepositEntryCheckProcessor : Exchange

class DepositEntryCheckProcessor {
    - KijitsuNyukinExchangeEntity exchange_message
    - DepositEntryCheckService service
    + void process()
}
class DepositEntryCheckService {
    - AppConfig appConfig
    - DepositEntryCheckResponseType response_body
    + DepositEntryCheckResponseType serviceRequest()
}
DepositEntryCheckProcessor --> DepositEntryCheckService : CALL
class DepositEntryCheckRequestType {
    - String card_number
    - String customer_contract_number
    - String customer_billing_due_date
    - String contract_settlement_date
    - String deposit_date
    - BigDecimal deposit_amount
    - String excess_money_handling_category
    + DepositEntryCheckRequestType()
}
class ServiceRequestType {
    - String request_id
}
DepositEntryCheckRequestType ---|> ServiceRequestType

class DepositEntryCheckResponseType {
}
class ServiceResponseType {
    - ServiceRequestType service_request
    - String response_result
    - String err_code
    - String err_context
    + void setResult()
}
DepositEntryCheckResponseType ---|> ServiceResponseType
DepositEntryCheckService <.. DepositEntryCheckRequestType: REQUEST
DepositEntryCheckService ..> DepositEntryCheckResponseType : RESPONSE
DepositEntryCheckProcessor -> DepositCategoryProcessor : Exchange: KijitsuNyukinExchangeEntity

class DepositCategoryProcessor {
    - KijitsuNyukinExchangeEntity exchange_message
    - DepositCategoryService service
    + void process()
}
class DepositCategoryService {
    - AppConfig appConfig
    - DepositCategoryResponseType response_body
    + DepositCategoryRequestType serviceRequest()
}
DepositCategoryProcessor --> DepositCategoryService : CALL
class DepositCategoryRequestType {
    - String customer_contract_number
    - String customer_billing_due_date
    - String contract_settlement_date
    - String deposit_date
    + DepositCategoryRequestType()
}
note bottom: Extends ServiceRequestType
class DepositCategoryResponseType {
    - String deposit_category_code
}
note bottom: Extends ServiceResponseType
DepositCategoryService <.. DepositCategoryRequestType: REQUEST
DepositCategoryService ..> DepositCategoryResponseType : RESPONSE
DepositCategoryProcessor -> CheckAvailableDepositAmountProcessor : Exchange: KijitsuNyukinExchangeEntity

class CheckAvailableDepositAmountProcessor {
    - KijitsuNyukinExchangeEntity exchange_message
    - CheckAvailableDepositAmountService service
    + void process()
}
class CheckAvailableDepositAmountService {
    - AppConfig appConfig
    - CheckAvailableDepositAmountResponseType response_body
    + CheckAvailableDepositAmountResponseType serviceRequest()
}
CheckAvailableDepositAmountProcessor --> CheckAvailableDepositAmountService : CALL
class CheckAvailableDepositAmountRequestType {
    - String customer_contract_number
    - String deposit_date
    - String customer_billing_due_date
    - String contract_settlement_date
    - String deposit_category_code
    + CheckAvailableDepositAmountRequestType()
}
note bottom: Extends ServiceRequestType
class CheckAvailableDepositAmountResponseType {
    - AvailableDepositAmountDataEntity deposit_available_amount_data
}
note bottom: Extends ServiceResponseType
CheckAvailableDepositAmountService <.. CheckAvailableDepositAmountRequestType: REQUEST
CheckAvailableDepositAmountService ..> CheckAvailableDepositAmountResponseType : RESPONSE
CheckAvailableDepositAmountProcessor -> DepositAllocationProcessor : Exchange: KijitsuNyukinExchangeEntity

class DepositAllocationProcessor {
    - KijitsuNyukinExchangeEntity exchange_message
    - DepositAllocationService service
    + void process()
}
class DepositAllocationService {
    - AppConfig appConfig
    - DepositAllocationResponseType response_body
    + DepositAllocationResponseType serviceRequest()
}
DepositAllocationProcessor --> DepositAllocationService : CALL
class DepositAllocationRequestType {
    - String customer_contract_number
    - String deposit_date
    - String customer_billing_due_date
    - String contract_settlement_date
    - String deposit_category_code
    - BigDecimal deposit_amount
    - String excess_money_handling_category
    - AvailableDepositAmountDataEntity deposit_available_amount_data
    + DepositAllocationRequestType()
}
note bottom: Extends ServiceRequestType
class DepositAllocationResponseType {
    - DepositAllocationDataEntity deposit_allocation_data
}
note bottom: Extends ServiceResponseType
DepositAllocationService <.. DepositAllocationRequestType: REQUEST
DepositAllocationService ..> DepositAllocationResponseType : RESPONSE
DepositAllocationProcessor -> DepositProcessor : Exchange: KijitsuNyukinExchangeEntity

class DepositProcessor {
    - KijitsuNyukinExchangeEntity exchange_message
    - DepositService service
    + void process()
}
class DepositService {
    - AppConfig appConfig
    - DepositResponseType response_body
    + DepositResponseType serviceRequest()
}
DepositProcessor --> DepositService : CALL
class DepositRequestType {
    - String customer_contract_number
    - String deposit_date
    - String customer_billing_due_date
    - String contract_settlement_date
    - String deposit_category_code
    - BigDecimal deposit_amount
    - String excess_money_handling_category
    - DepositAllocationDataEntity deposit_allocation_data
    + DepositRequestType()
}
note bottom: Extends ServiceRequestType
class DepositResponseType {
    - DepositDataEntity deposit_data
}
note bottom: Extends ServiceResponseType
DepositService <.. DepositRequestType: REQUEST
DepositService ..> DepositResponseType : RESPONSE
DepositProcessor -> DepositResultMessageProcessor : Exchange: KijitsuNyukinExchangeEntity

class DepositResultMessageProcessor {
    - KijitsuNyukinExchangeEntity exchange_message
    - DepositResultMessageRule rule
    + void process()
}
class DepositResultMessageRule {
    + KijitsuNyukinResponseEntity executeRule()
}
DepositResultMessageProcessor --> DepositResultMessageRule : CALL

class KijitsuNyukinExchangeEntity {
    - KijitsuNyukinRequestEntity deposit_request
    - String deposit_result
    - String err_code
    - String err_context
    - String deposit_category_code
    - AvailableDepositAmountDataEntity deposit_available_amount_data
    - DepositAllocationDataEntity deposit_allocation_data
    - DepositDataEntity deposit_data
    + KijitsuNyukinExchangeEntity()
    + void setErrorInf()
}

class KijitsuNyukinResponseEntity {
    - KijitsuNyukinRequestEntity deposit_request
    - String deposit_result
    - String err_code
    - String err_context
    - String deposit_category_code
    - SaikenCompositeUnitEntity deposit_allocation_amount
    - BigDecimal excess_money
    - BigDecimal jeccs_deposit
    - SeikyuCompositeUnitEntity estimated_billing_amount
    - SaikenCompositeUnitEntity balance_amount
}
DepositResultMessageRule <.. KijitsuNyukinExchangeEntity: INPUT
DepositResultMessageRule ..> KijitsuNyukinResponseEntity : OUTPUT
DepositResultMessageProcessor --> KijitsuNyukinResponseEntity : Exchange

class AvailableDepositAmountDataEntity {
    - SeikyuCompositeUnitEntity estimated_billing_amount
    - SaikenCompositeUnitEntity deposit_available_amount
}
AvailableDepositAmountDataEntity -- SeikyuCompositeUnitEntity: include
AvailableDepositAmountDataEntity -- SaikenCompositeUnitEntity: include

class SaikenCompositeUnitEntity {
    - SaikenSimpleUnitEntity total_amout
    - Map products_amount_map
}
class SaikenSimpleUnitEntity {
    - BigDecimal principal_amount
    - BigDecimal interest_amount
}
SaikenCompositeUnitEntity -- SaikenSimpleUnitEntity: include
class SeikyuCompositeUnitEntity {
    - SeikyuSimpleUnitEntity total_billing
    - Map products_billing_map
}
class SeikyuSimpleUnitEntity {
    - BigDecimal billing_principal_amount
    - BigDecimal billing_interest_amount
    - BigDecimal deposit_principal_amount
    - BigDecimal deposit_interest_amount
}
SeikyuCompositeUnitEntity -- SeikyuSimpleUnitEntity: include

class DepositAllocationDataEntity {
    - SaikenCompositeUnitEntity deposit_allocation_amount
    - SeikyuCompositeUnitEntity estimated_billing_amount
    - BigDecimal excess_money
}
class DepositDataEntity {
    - SaikenCompositeUnitEntity deposit_allocation_amount
    - BigDecimal excess_money
    - SeikyuCompositeUnitEntity estimated_billing_amount
    - SaikenCompositeUnitEntity balance_amount
}

@enduml